# hike-iq

./: .gitignore  LICENSE  README.md  mise.toml  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  parser.rs  repo.rs  tiles.rs  types.rs  zones.rs
src/components/: ActivityCard.tsx  ActivityDetailView.tsx  ActivityHeatmap.tsx  ActivityTable.tsx  AppLayout.tsx  DailyVolumeChart.tsx  ElevationAnalysisChart.tsx  HeartRateAnalysisTable.tsx  HeartRateRecoveryTable.tsx  HeartRateZoneChartV2.tsx  HrTimelineChart.tsx  ImportButton.tsx  ImportProgressDialog.tsx  MapView.tsx  PaceHeartRateChart.tsx  PageHeader.tsx  WeeklyVolumeChart.tsx  YearSummaryChart.tsx  ZoneBar.tsx  ZoneBreakdownCard.tsx
src/components/ui/: zoomable-card.tsx
src/lib/: api.ts  types.ts  units.tsx  zones.ts
src/pages/: ActivitiesPage.tsx  HomePage.tsx  MapPage.tsx
